<resources>
    <string name="app_name">Sensors2Db</string>
    <string name="action_settings">Settings</string>
    <string name="btnStartRecording">Start</string>
    <string name="btnStopRecording">Stop</string>
    <string name="btnClearDB">Clear DB</string>
    <string name="btnShowDB">Show</string>
    <string name="btnExportDB">Export</string>

    <string name="onExitClick">Exit</string>
    <string name="btnShowSensorsList">Show Sensors List</string>
    
    <string-array name="strArrSensorsDelay">
        <item>Fastest (SENSOR_DELAY_FASTEST)</item>
        <item>Fast (SENSOR_DELAY_GAME)</item>
        <item>Normal (SENSOR_DELAY_UI)</item>
        <item>Slow (SENSOR_DELAY_NORMAL)</item>
    </string-array>

    <string name="spinnerSensorsDelayPromt">Sensors delay</string>

    <string name="textViewSpinner">Choose sensors delay</string>


</resources>
